@@ -1,3 +1,7 @@
+SimpleComplex/Locale 1.x, 2017-08-11
+------------------------------------
+- Allow that text() placeholder key is % prefixed.
+
 SimpleComplex/Locale 1.x, 2017-07-20
 ------------------------------------
 - Cli script find vendor dir fix.
